Fix header product name alignment in Firefox
Firefox appears to calculate the baseline differently

This fix uses an offset of `- 0.5px` to fix both `@1x` and `@2x` displays

--- a/packages/govuk-frontend/src/govuk/components/header/_index.scss
+++ b/packages/govuk-frontend/src/govuk/components/header/_index.scss
@@ -67,12 +67,18 @@
 
     // Maintain space below logo when wrapped
     margin-top: $product-name-offset;
+    @-moz-document url-prefix() {
+      margin-top: $product-name-offset - 0.5px;
+    }
 
     // Align vertically with logo when not wrapped
     vertical-align: top;
 
     @include govuk-media-query($from: tablet) {
       margin-top: $product-name-offset-tablet;
+      @-moz-document url-prefix() {
+        margin-top: $product-name-offset-tablet - 0.5px;
+      }
     }
   }
 
